==> hashaam1217/ELEC291/Lab6/MSP/Wav_Sound/MSP430_Receiver.c <==
#include <msp430.h>
#include <stdio.h>
#define RXD BIT1 // Receive Data (RXD) at P1.1
#define TXD BIT2 // Transmit Data (TXD) at P1.2
#define CLK 16000000L
#define BAUD 115200
#define SPI_CLK 2000000L
#define CLR_CS P1OUT &= ~BIT0
#define SET_CS P1OUT |= BIT0
#define WRITE_ENABLE     0x06  // Address:0 Dummy:0 Num:0 fMax: 25MHz
#define WRITE_DISABLE    0x04  // Address:0 Dummy:0 Num:0 fMax: 25MHz
#define READ_STATUS      0x05  // Address:0 Dummy:0 Num:1 to infinite fMax: 32MHz
#define READ_BYTES       0x03  // Address:3 Dummy:0 Num:1 to infinite fMax: 20MHz
#define READ_SILICON_ID  0xab  // Address:0 Dummy:3 Num:1 to infinite fMax: 32MHz
#define FAST_READ        0x0b  // Address:3 Dummy:1 Num:1 to infinite fMax: 40MHz
#define WRITE_STATUS     0x01  // Address:0 Dummy:0 Num:1 fMax: 25MHz
#define WRITE_BYTES      0x02  // Address:3 Dummy:0 Num:1 to 256 fMax: 25MHz
#define ERASE_ALL        0xc7  // Address:0 Dummy:0 Num:0 fMax: 25MHz
#define ERASE_BLOCK      0xd8  // Address:3 Dummy:0 Num:0 fMax: 25MHz
#define READ_DEVICE_ID   0x9f  // Address:0 Dummy:2 Num:1 to infinite fMax: 25MHz
#define DELAY_FREQ_HZ 1000 // 1ms
#define MS_DELAY_CYCLES (CLK / DELAY_FREQ_HZ) // Number of cycles to delay based on CLK.

unsigned char uart_getc()
{
    while (!(IFG2&UCA0RXIFG)); // USCI_A0 RX buffer ready?
	return UCA0RXBUF;
}

void uart_putc (unsigned char c)
{
	while (!(IFG2&UCA0TXIFG)); // USCI_A0 TX buffer ready?
  	UCA0TXBUF = c; // TX
}

unsigned char SPIWrite (unsigned char x)
{
	UCB0TXBUF=x;
	while(UCB0STAT & UCBUSY); // Wait for transmission to end.
	return UCB0RXBUF;
}

int main(void)
{    
    unsigned char c;
    unsigned int j, n;
    unsigned long start, nbytes;
    unsigned short crc;
	
    WDTCTL  = WDTPW | WDTHOLD; 	// Stop WDT.
    
    if (CALBC1_16MHZ != 0xFF) 
    {
		BCSCTL1 = CALBC1_16MHZ; // Set DCO.
	  	DCOCTL  = CALDCO_16MHZ;
	}

    uart_init();
    Initialize_SPI();
    configure_pwm();
    Init_Timer1_A0();

	playcnt=0;
	play_flag=0;
	SET_CS; // Disable 25Q32 SPI flash memory
      
	while(1)
	{
		c=uart_getc();
		if(c=='#')
		{
			playcnt=0;
			play_flag=0;
			SET_CS; // Disable 25Q32 SPI flash memory

			c=uart_getc();
			switch(c)
			{
				case '0': // Identify command
				    CLR_CS; // Enable 25Q32 SPI flash memory.
				    SPIWrite(READ_DEVICE_ID);
				    c=SPIWrite((unsigned char)(0x00));
				    uart_putc(c);
				    c=SPIWrite((unsigned char)(0x00));
				    uart_putc(c);
				    c=SPIWrite((unsigned char)(0x00));
				    uart_putc(c);
				    SET_CS; // Disable 25Q32 SPI flash memory
				break;

				case '1': // Erase whole flash (takes a long time)
					Enable_Write();
				    CLR_CS; // Enable 25Q32 SPI flash memory.
				    SPIWrite(ERASE_ALL);
				    SET_CS; // Disable 25Q32 SPI flash memory
				    Check_WIP();
				    uart_putc(0x01);
				break;
				
				case '2': // Load flash page (256 bytes or less)
					Enable_Write();
				    CLR_CS; // Enable 25Q32 SPI flash memory.
				    SPIWrite(WRITE_BYTES);
				    c=uart_getc(); // Address bits 16 to 23
				    SPIWrite(c);
				    c=uart_getc(); // Address bits 8 to 15
				    SPIWrite(c);
				    c=uart_getc(); // Address bits 0 to 7
				    SPIWrite(c);
				    n=uart_getc(); // Number of bytes to write
				    if(n==0) n=256;
				    for(j=0; j<n; j++)
				    {
				    	c=uart_getc();
				    	SPIWrite(c);
				    }
				    SET_CS; // Disable 25Q32 SPI flash memory
				    Check_WIP();
				    uart_putc(0x01);
				break;
				
				case '3': // Read flash bytes (256 bytes or less)
				    CLR_CS; // Enable 25Q32 SPI flash memory.
				    SPIWrite(READ_BYTES);
				    c=uart_getc(); // Address bits 16 to 23
				    SPIWrite(c);
				    c=uart_getc(); // Address bits 8 to 15
				    SPIWrite(c);
				    c=uart_getc(); // Address bits 0 to 7
				    SPIWrite(c);
				    n=uart_getc(); // Number of bytes to write
				    if(n==0) n=256;
				    for(j=0; j<n; j++)
				    {
				    	c=SPIWrite(0x55);
				    	uart_putc(c);
				    }
				    SET_CS; // Disable 25Q32 SPI flash memory
				break;
				
				case '4': // Playback a portion of the stored wav file
					get_ulong(&start); // Get the start position
					get_ulong(&nbytes); // Get the number of bytes to playback
					Start_Playback(start, nbytes);
				break;
				
				// WARNING: CRC calculation here is way slower than in the EFM8 or SoC-8052.
				// Modify computer_sender.c so it doesn't time out.
				// Change line:
				//               maxwait=length/300000.0;
				// to:
				//               maxwait=length/30000.0;
				case '5': ; // Calculate and send CRC-16 of ISP flash memory from zero to the 24-bit passed value.
					get_ulong(&nbytes); // Get the total number of bytes used to calculate the crc
				
					crc=0;
				    CLR_CS; // Enable 25Q32 SPI flash memory.
				    SPIWrite(READ_BYTES);
				    SPIWrite(0x00); // Address bits 16 to 23
				    SPIWrite(0x00); // Address bits 8 to 1
				    SPIWrite(0x00); // Address bits 0 to 7
				    
					for(start=0; start<nbytes; start++)
					{
						c=SPIWrite(0x00);
						crc=crc16_ccitt(c, crc);
					}
				    SET_CS; // Disable 25Q32 SPI flash memory

					uart_putc(crc/0x100); // Send high byte of CRC
					uart_putc(crc%0x100); // Send low byte of CRC
				break;

				case '6': // Fill flash page (256 bytes or less).
					Enable_Write();
				    CLR_CS; // Enable 25Q32 SPI flash memory.
				    SPIWrite(WRITE_BYTES);
				    c=uart_getc(); // Address bits 16 to 23
				    SPIWrite(c);
				    c=uart_getc(); // Address bits 8 to 15
				    SPIWrite(c);
				    c=uart_getc(); // Address bits 0 to 7
				    SPIWrite(c);
				    c=uart_getc(); // byte to copy to page
				    for(j=0; j<256; j++)
				    {
				    	SPIWrite(c);
				    }
				    SET_CS; // Disable 25Q32 SPI flash memory
				    Check_WIP();
				    uart_putc(0x01);
				break;
			}
		}
    }  
}
